Logger + Database communication && Fixes && Initial bet

--- a/database/makefile
+++ b/database/makefile
@@ -3,12 +3,15 @@ include ../makevars
 # --[ Vars ]------------------ #
 TARGET = database.app
 SRC_C = src
-SRC_HEADERS = ../$(LIBS_HEADERS) include
+SRC_HEADERS = ../$(LIBS_HEADERS) include ../comapi/db_sv
 SRC_LIBS = ../$(LIBS_PATH)
-LIBS =
+SRC_API = ../comapi/db_sv
+LIBS = semaphores
+GCC_FLAGS += -DDS_SERVER
 # ---------------------------- #
 
 SOURCES = $(wildcard $(SRC_C)/*.c & $(SRC_C)/**/*.c)
+SOURCES += $(wildcard $(SRC_API)/*.c)
 OBJECTS = $(SOURCES:.c=.o)
 
 HEADERS = $(foreach HEADER,$(SRC_HEADERS),-I $(HEADER))
@@ -20,6 +23,7 @@ all: $(TARGET)
 
 $(TARGET): $(OBJECTS)
 	$(GCC) $(GCC_FLAGS) $(HEADERS) -o $@ $^ $(SOURCE_LIBS) $(DEPS)
+	rm -f $(OBJECTS)
 
 %.o: %.c
 	$(GCC) $(GCC_FLAGS) $(HEADERS) -c $< -o $@ $(SOURCE_LIBS) $(DEPS)
